[project]
name = "kcfinder-client"
version = "0.2.2"
description = "Python client library for KCFinder file manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["file-manager", "httpx", "kcfinder", "php"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28",
]

[project.urls]
Changelog = "https://github.com/cyberops7/kcfinder-client/releases"
Issues = "https://github.com/cyberops7/kcfinder-client/issues"
Repository = "https://github.com/cyberops7/kcfinder-client"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kcfinder_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyrefly]
search_path = ["."]
project_excludes = ["tasks.py", "live.py"]

[tool.ruff]
src = ["src", "tests"]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "bandit",
    "invoke",
    "pip-audit",
    "pyrefly",
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "python-dotenv>=1.2.2",
    "ruff",
]
